# Autobike

./: .gitmodules
config/scooter/: VESCAPP.xml  VESCMOTOR.xml
docs/: introduction.md  manual.md
myrio/c/: .gitignore  CMakeLists.txt
myrio/c/debug_bin/: mpc_debug
myrio/c/src/: kalman_filter.c  mpc_debug.c  mpc_trajectory.c  mpc_trajectory.h  pid_speed_controller.c  pre_mpc_trajectory.c  trajectory_controller.c  trajectory_selector.c
myrio/labview/: Autobike.aliases  Calibration.vi  Configuration.vi  Main.vi
myrio/labview/Sub VIs/Balancing Controller/: Balancing Controller.vi
myrio/labview/Sub VIs/Configuration/: Configuration.ctl  Position Check.vi  Read Configuration.vi  Write Configuration.vi
myrio/labview/Sub VIs/Drive Motor/: Drive Motor TXRX.vi  PI.vi
myrio/labview/Sub VIs/Emergency Stop/: Emergency Stop Read.vi
myrio/labview/Sub VIs/GNSS/: GNSS Read.vi
myrio/labview/Sub VIs/IMU/: IMU Configure.vi  IMU Read.vi
myrio/labview/Sub VIs/Logging/: Control 1.ctl  Log Init.vi  Log Write.vi
simulation/: AACircle20m.csv  AAStraight.csv  AATraj.csv  AATrajCorrectedSpeed.csv  Compare_real_to_sim.m  Data_inspector.m  Doc.txt  KalmanFilter.m  Kalman_offline.asv  Kalman_offline.m  LQRcontroller.m  LoadBikeParameters.m  MPC_tuning.m  Main_bikesim.slx  Main_bikesim.slx.autosave  Main_bikesim.slxc  Main_bikesim_old.slx  Main_bikesim_old.slxc  Main_sim.asv  Main_sim.m  Main_sim_edited.m  MyTraj.csv  Parameters_matrixmat\red_bike\matrixmat.csv  Plot_Labview.m  Plot_MPC_tuning_results.m  Plot_bikesimulation_results.m  PlottingResults.m  README.m  ReferenceGenerator.asv  ReferenceGenerator.m  Refgeneration.m  SaveInCSV.m  Startup_labview.m  Startup_labview_summerProject.m  Startup_labview_v1.m  Startup_labview_v2.asv  Startup_labview_v2.m  TestCases.m  TestTrajectories.m  Trajectory.m  (+12 more)
simulation/Labview_data/: data.csv
simulation/Logging_data/PI_speed_controller_tests/: data.csv
simulation/Not used matlab file/: balancing_offline.m
simulation/Parameters_matrixmat/red_bike/: matrixmat.csv  matrixmatnew.csv
simulation/Traj_ref_test/: AATrajectory.csv  generated.csv  generated1.csv  new_trajectoryfile.csv  refValidations.csv  trajectorymat_asta0_circle_3_l.csv  trajectorymat_parking_line.csv
simulation/slprj/_jitprj/: jitEngineAccessInfo.mat  s0ArTvKoHBIxcBhZlT1tVkC.l  s0ArTvKoHBIxcBhZlT1tVkC.mat  s0DzVkoaNvcBBY5EjNr3hyF.mat  s0KdGz5vJA6gKcxC3HoTV9E.l  s0KdGz5vJA6gKcxC3HoTV9E.mat  s0a4LXzteP618kBHadXoPSB.l  s0a4LXzteP618kBHadXoPSB.mat  s10pQN8oDWNVkR1fAJChhsB.mat  s1MMMmYnMqCX7IDNuvRWTlD.l  s1MMMmYnMqCX7IDNuvRWTlD.mat  s1QuIcD1D9Q88yBUzih9LME.l  s1QuIcD1D9Q88yBUzih9LME.mat  s1glb4DLgWcWlkqCGceUS6F.l  s1glb4DLgWcWlkqCGceUS6F.mat  s267Nukpbm1K1KJKVKCetLH.l  s267Nukpbm1K1KJKVKCetLH.mat  s29jadH1Kk2jDjTTzd79I2D.l  s29jadH1Kk2jDjTTzd79I2D.mat  s2J6wfBNknqf8DjqKU29Y6.l  s2J6wfBNknqf8DjqKU29Y6.mat  s2LR6vYhrvoU1ZcbHgoKLzD.l  s2LR6vYhrvoU1ZcbHgoKLzD.mat  s2MjaQEliqhIaShGU6Bf1P.l  s2MjaQEliqhIaShGU6Bf1P.mat  s2dFGRMUS4E6WcXEDVORzmE.l  s2dFGRMUS4E6WcXEDVORzmE.mat  s2gO057hWZjUQEdKYDQl3AH.l  s2gO057hWZjUQEdKYDQl3AH.mat  s2p80jw9Wazxf5r9EhkI3fH.l  s2p80jw9Wazxf5r9EhkI3fH.mat  s3AnC0jkk8ilOTHZZI8mmQB.l  s3AnC0jkk8ilOTHZZI8mmQB.mat  s3T0qA5cW8Bn4anbw2DYwVD.l  s3T0qA5cW8Bn4anbw2DYwVD.mat  s3UpWWa6FkMjL3ulXQq98TF.l  s3UpWWa6FkMjL3ulXQq98TF.mat  s3ZV7fAK9ScrRVkx6ZQ5zCE.l  s3ZV7fAK9ScrRVkx6ZQ5zCE.mat  s3xp7NsxQfCXdeEzaBeNVoB.l  (+621 more)
(+923 files in other folders)
